<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="35dp"
        android:orientation="vertical"
        android:padding="@dimen/db_eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <EditText
        android:id="@+id/firstOperandEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="non"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/zero"
        android:inputType="number"
        android:padding="@dimen/db_eight"
        android:singleLine="true"
        android:textColor="#000"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:text="6÷7-8×2+962/7" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:gravity="end|center_vertical"
        android:padding="@dimen/db_eight"
        android:text=""
        tools:text="100" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/db_eight"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        android:background="@drawable/button"
        android:onClick="getOperation"
        style="@style/buttonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/db_eight"
        android:layout_marginTop="16dp"
        android:text="-"
        android:background="@drawable/button"
        android:onClick="getOperation"
        style="@style/buttonStyle"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/multiplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/db_eight"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:onClick="getOperation"
        android:text="@string/multiply"
        style="@style/buttonStyle"
        app:layout_constraintStart_toEndOf="@+id/minusButton"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/openBracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/db_eight"
        android:layout_marginEnd="@dimen/db_eight"
        style="@style/buttonStyle"
        android:text="@string/open_bracket"
        android:background="@drawable/button"
        android:onClick="onBracketClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multiplyButton"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/divideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/db_eight"
        android:layout_marginTop="16dp"
        android:text="@string/divide"
        android:background="@drawable/button"
        style="@style/buttonStyle"
        android:onClick="getOperation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/db_eight"
        android:layout_marginTop="@dimen/db_sixsteen"
        android:text="@string/equal"
        android:background="@drawable/equal_button"
        style="@style/buttonStyle"
        android:onClick="equal"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@+id/divideButton"
        app:layout_constraintTop_toBottomOf="@+id/minusButton" />

    <Button
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/db_eight"
        android:layout_marginTop="@dimen/db_sixsteen"
        android:text="@string/undo"
        android:onClick="undo"
        android:enabled="false"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_sixsteen"
        app:layout_constraintStart_toEndOf="@+id/equalButton"
        app:layout_constraintTop_toBottomOf="@+id/multiplyButton" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/closeBracketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_bracket"
        android:layout_marginTop="@dimen/db_sixsteen"
        android:layout_marginStart="@dimen/db_eight"
        android:layout_marginEnd="@dimen/db_eight"
        style="@style/buttonStyle"
        android:background="@drawable/button"
        android:onClick="onBracketClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/undoButton"
        app:layout_constraintTop_toBottomOf="@+id/openBracket" />

    <Button
        android:id="@+id/redoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/db_eight"
        android:layout_marginTop="@dimen/db_sixsteen"
        android:text="@string/redo"
        android:background="@drawable/button"
        android:onClick="redo"
        android:enabled="false"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_sixsteen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divideButton" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/db_eight"
        android:layout_marginTop="@dimen/db_sixsteen"
        android:text="@string/clear"
        android:background="@drawable/button"
        style="@style/buttonStyle"
        android:onClick="onClearClick"
        app:layout_constraintStart_toEndOf="@+id/redoButton"
        app:layout_constraintTop_toBottomOf="@+id/equalButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/db_eight"
        android:layout_marginBottom="@dimen/db_eight"
        android:layout_marginTop="@dimen/db_eight"
        android:layout_marginEnd="@dimen/db_eight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

</androidx.constraintlayout.widget.ConstraintLayout>